--- a/polytype.cabal
+++ b/polytype.cabal
@@ -40,8 +40,6 @@ library
     NumericUnderscores
     QuantifiedConstraints
     FlexibleInstances
-    -- XXX -- plugin or better anns should fix this
-    --AllowAmbiguousTypes
   hs-source-dirs:      src
   exposed-modules:     Polytype
                      , Polytype.Ansi
@@ -121,40 +119,39 @@ executable polytype-htop-test
                      , optparse-applicative
   default-language:    Haskell2010
 
---test-suite polytype-tests
---  type:                exitcode-stdio-1.0
---  hs-source-dirs:      test
---  main-is:             Spec.hs
---  other-modules:       SanitySpec
---                       SpecHelper
---  build-depends:       base >= 4.7 && < 5
---                     , polytype
---                     , hspec
---  default-language:    Haskell2010
-
-
-test-suite doctests
-  type:          exitcode-stdio-1.0
-  ghc-options: -O2 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
-  -- ghc-options:   -threaded
-  main-is:       Doctest.hs
+test-suite polytype-tests
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  other-modules:       SanitySpec
+                       SpecHelper
+                       PtySpec SerialSpec StdStreamsSpec TeletypeSpec
+  build-depends:       base >= 4.7 && < 5
+                     , bytestring
+                     , data-default
+                     , text
+                     , polytype
+                     , hspec
+                     , hspec-discover
+  default-language:    Haskell2010
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-extensions:
     DataKinds
-    FlexibleContexts
-    GADTs
-    LambdaCase
-    PolyKinds
-    RankNTypes
-    ScopedTypeVariables
+--    FlexibleContexts
+--    GADTs
+--    LambdaCase
+--    BlockArguments
+--    PolyKinds
+--    RecordWildCards
+--    RankNTypes
+--    ScopedTypeVariables
     TypeApplications
     TypeOperators
-    TypeFamilies
-    TemplateHaskell
-  build-depends: base
-               , doctest >= 0.8
-               , doctest-discover >= 0.2.1.0
-               , polysemy
-               , polysemy-plugin
+--    TypeFamilies
+--    TemplateHaskell
+--    NumericUnderscores
+--    QuantifiedConstraints
+--    FlexibleInstances
 
 source-repository head
   type:     git
