--- a/polytype.cabal
+++ b/polytype.cabal
@@ -120,6 +120,16 @@ executable polytype-htop-demo
                      , optparse-applicative
   default-language:    Haskell2010
 
+executable polytype-ircbridge-test
+  if !flag(examples)
+    buildable: False
+  hs-source-dirs:      app
+  main-is:             IRCBridge.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , polytype
+  default-language:    Haskell2010
+
 test-suite polytype-tests
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
